--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <!-- Ultimos o mejores opiniones -->
 
         <section>
-        <h3 class="op__titulo">Opiniones</h3>
+        <h2 class="op__titulo">Opiniones</h2>
             <div class="opGrid">
                 <div class="opiniones">
                     <h4 class="op__c">Cliente 1</h4>
@@ -68,18 +68,18 @@
         <section>
             <h3 class="titulo__trab">Trabajos realizados</h3>
             <div class="trabGrid">
-                <article class="trabajos" >
+                <article class="trabajos sombra" >
                     <h4 class="titulo2">Armado de tablero de proteccion</h4>
                     <p class="descTrabajo">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus atque velit voluptate ea. Sapiente recusandae necessitatibus dolor ex voluptates. Non aut delectus hic, laborum soluta consectetur fuga quas rerum quis.</p>
                     <img src="./imagenes/tablero.jpg" alt="tablero" class="imgTrabajo" />
-                    <a href="./trabajos.realizados.html" class="boton">Ver mas
+                    <a href="./paginas/trabajos.realizados.html" class="boton">Ver mas
                     </a>
                 </article>
-                <article class="trabajos" >
+                <article class="trabajos sombra" >
                     <h4 class="titulo2">Armado de tablero de proteccion</h4>
                     <p class="descTrabajo">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus atque velit voluptate ea. Sapiente recusandae necessitatibus dolor ex voluptates. Non aut delectus hic, laborum soluta consectetur fuga quas rerum quis.</p>
                     <img src="./imagenes/tablero.jpg" alt="tablero" class="imgTrabajo" />
-                    <a href="./trabajos.realizados.html" class="boton">Ver mas
+                    <a href="./paginas/trabajos.realizados.html" class="boton">Ver mas
                     </a>
                 </article>
             </div>
