--- a/paginas/trabajos.realizados.html
+++ b/paginas/trabajos.realizados.html
@@ -39,32 +39,32 @@
     <main>
         <h2 class="titulo__trab">Trabajos realizados</h2>
         <section class="trab">
-            <article class="trabajos" >
+            <article class="trabajos sombra" >
                 <h4 class="titulo2">Armado de tablero de proteccion</h4>
                 <p class="descTrabajo">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus atque velit voluptate ea. Sapiente recusandae necessitatibus dolor ex voluptates. Non aut delectus hic, laborum soluta consectetur fuga quas rerum quis.</p>
                 <img src="../imagenes/tablero.jpg" alt="tablero" class="imgTrabajo" />
             </article>
-            <article class="trabajos" >
+            <article class="trabajos sombra" >
                 <h4 class="titulo2">Armado de tablero de proteccion</h4>
                 <p class="descTrabajo">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus atque velit voluptate ea. Sapiente recusandae necessitatibus dolor ex voluptates. Non aut delectus hic, laborum soluta consectetur fuga quas rerum quis.</p>
                 <img src="../imagenes/tablero.jpg" alt="tablero" class="imgTrabajo" />
             </article>
-            <article class="trabajos" >
+            <article class="trabajos sombra" >
                 <h4 class="titulo2">Armado de tablero de proteccion</h4>
                 <p class="descTrabajo">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus atque velit voluptate ea. Sapiente recusandae necessitatibus dolor ex voluptates. Non aut delectus hic, laborum soluta consectetur fuga quas rerum quis.</p>
                 <img src="../imagenes/tablero.jpg" alt="tablero" class="imgTrabajo" />
             </article>
-            <article class="trabajos" >
+            <article class="trabajos sombra" >
                 <h4 class="titulo2">Armado de tablero de proteccion</h4>
                 <p class="descTrabajo">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus atque velit voluptate ea. Sapiente recusandae necessitatibus dolor ex voluptates. Non aut delectus hic, laborum soluta consectetur fuga quas rerum quis.</p>
                 <img src="../imagenes/tablero.jpg" alt="tablero" class="imgTrabajo" />
             </article>
-            <article class="trabajos" >
+            <article class="trabajos sombra" >
                 <h4 class="titulo2">Armado de tablero de proteccion</h4>
                 <p class="descTrabajo">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus atque velit voluptate ea. Sapiente recusandae necessitatibus dolor ex voluptates. Non aut delectus hic, laborum soluta consectetur fuga quas rerum quis.</p>
                 <img src="../imagenes/tablero.jpg" alt="tablero" class="imgTrabajo" />
             </article>
-            <article class="trabajos" >
+            <article class="trabajos sombra" >
                 <h4 class="titulo2">Armado de tablero de proteccion</h4>
                 <p class="descTrabajo">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus atque velit voluptate ea. Sapiente recusandae necessitatibus dolor ex voluptates. Non aut delectus hic, laborum soluta consectetur fuga quas rerum quis.</p>
                 <img src="../imagenes/tablero.jpg" alt="tablero" class="imgTrabajo" />
