--- a/paginas/contactenos.html
+++ b/paginas/contactenos.html
@@ -39,20 +39,20 @@
             <h2 class="tituloContacto">Contacto</h2>
             <form action="" method="" enctype="" class="contactoGrid" >
                     <label for="nombre">Ingrese su nombre</label>
-                    <input type="text" id="nombre" name="nombre" placeholder="Nombre..." />
+                    <input type="text" id="nombre" name="nombre" placeholder="Nombre..." class="aniContacto"/>
                     <label for="apellido">Ingrese su apellido</label>
-                    <input type="text" id="apellido" name="apellido" placeholder="Apellido..." />
+                    <input type="text" id="apellido" name="apellido" placeholder="Apellido..." class="aniContacto"/>
                     <label for="correo">Ingrese email</label>
-                    <input type="email" id="correo" name="correo" placeholder="Email..." />
+                    <input type="email" id="correo" name="correo" placeholder="Email..." class="aniContacto"/>
                     <label for="Estado">Estado civil</label>
-                    <select name="Estado" id="Estado">
+                    <select name="Estado" id="Estado" class="aniContacto">
                         <option value="Soltero">Soltero</option>
                         <option value="Casado">Casado</option>
                     </select>
                     <label for="newsletter">Suscripcion a nuestro newsletter</label>
                     <input type="checkbox" id="newsletter" />
                     <label for="consulta">Ingrese su mensaje</label>
-                    <textarea name="consulta" id="consulta" cols="30" rows="10" placeholder="Consulta..."></textarea>
+                    <textarea name="consulta" id="consulta" cols="30" rows="10" placeholder="Consulta..." class="aniContacto"></textarea>
                     <fieldset>
                         <legend>Tipo de mensaje</legend>
                         <label for="consulta">Consulta</label>
@@ -60,8 +60,8 @@
                         <label for="opinion">Opinion</label>
                         <input type="radio" id="opinion" name="contacto" />
                     </fieldset>
-                    <button type="submit" class="botonOp">Enviar</button>
-                    <button type="reset" class="botonOp">Limpiar</button>
+                    <button type="submit" class="botonOp aniContacto">Enviar</button>
+                    <button type="reset" class="botonOp aniContacto">Limpiar</button>
             </form>
         </article>
     </main>
