--- a/paginas/opiniones.html
+++ b/paginas/opiniones.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Opiniones</title>
+    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css"/>
+
     <link rel="shortcut icon" href="../imagenes/lampara.jpg" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,26 +17,25 @@
     <link href="https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&family=Lato&family=Sansita&display=swap" rel="stylesheet" />
 </head>
 <body>
-    <header class="headerGrid">
-        <!-- Barra de navegacion con img con link-->
-        <div class="barra">
-            <a href="../index.html" target="_blank" rel="">
-                <img src="../imagenes/lampara.jpg" alt="lampara" class="logo" />
-            </a>
-            <h1>Electrosoluciones</h1>
-        </div>
-        <nav class="barra">
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="./opiniones.html">Opiniones</a></li>
-                <li><a href="./trabajos.realizados.html">Trabajos realizados</a></li>
-                <li><a href="./servicios.html">Servicios</a></li>
-                <li><a href="./contactenos.html">Contactenos</a></li>
-            </ul>
+    <!-- Barra de navegacion con img con link-->
+    <header class="header sticky-top">
+        <nav class="navbar navbar-expand-md">
+            <div class="container">
+                <a class="navbar-brand text-warning" href="#"><img src="../imagenes/lampara.jpg" alt="lampara" class="logo" />Electrosoluciones</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon bg-warning"></span>
+                </button> 
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto fw-bold">
+                        <li class="nav-item"><a class="nav-link colorNav" aria-current="page" href="../index.html">Inicio</a></li>
+                        <li class="nav-item"><a class="nav-link colorNav" href="./opiniones.html">Opiniones</a></li>
+                        <li class="nav-item"><a class="nav-link colorNav" href="./trabajos.realizados.html">Trabajos realizados</a></li>
+                        <li class="nav-item"><a class="nav-link colorNav" href="./servicios.html">Servicios</a></li>
+                        <li class="nav-item"><a class="nav-link colorNav" href="./contactenos.html">Contactenos</a></li>
+                    </ul>
+                </div>
+            </div>
         </nav>
-        <div class="menudesplegable">
-            🍔
-        </div>
     </header>
     <main>
         <!-- Ultimos opiniones -->
@@ -70,13 +74,28 @@
     </main>
 
     <!-- footer con sus link de contacto -->
-    <footer>
-        <ul class="contactos">
-            <li><a href="./contactenos.html">Contactenos</a></li>
-            <li><a href="https://www.facebook.com/profile.php?id=100063765990228" target="_blank">Electrosoluciones.Facebook</a></li>
-            <li><a href="" target="_blank">Electrosoluciones.Instagram</a></li>
-            <li><a href="" target="_blank">electrosoluciones.2@gmail.com</a></li>
-        </ul>
+    <footer class="contactos d-flex align-items-center">
+        <div class="container">
+            <div class="row">
+                <div class= "col-sm-3 col-md-3 d-flex justify-content-center">
+                    <a href="./paginas/contactenos.html" class="efectoFoot text-decoration-none">Contactenos</a>
+                </div>
+                <div class= "col-sm-3 col-md-3 d-flex justify-content-center">
+                    <a href="https://www.facebook.com/profile.php?id=100063765990228" target="_blank" class=" efectoFoot"><i class="bi bi-facebook"></i></a>
+                </div>
+                <div class= "col-sm-3 col-md-3 d-flex justify-content-center">
+                    <a href="" target="_blank" class="efectoFoot"><i class="bi bi-instagram"></i></a>
+                </div>
+                <div class= "col-sm-3 col-md-3 d-flex justify-content-center">
+                    <a href="" target="_blank" class="efectoFoot"><i class="bi bi-envelope"></i></a>
+                </div>
+            </div>
+        </div>
     </footer>
+
+    <div class="position-fixed bottom-0 end-0 mb-5 me-4">
+        <a href="https://wa.me/5411"><img src="https://cdn.iconscout.com/icon/free/png-512/whatsapp-circle-1868968-1583132.png"alt="Whatsapp" width="60" height="60"/>
+        </a>
+    </div>
 </body>
 </html>
