--- a/paginas/trabajos.realizados.html
+++ b/paginas/trabajos.realizados.html
@@ -69,7 +69,7 @@
                     <div class="card-body">
                         <h5 class="card-title">ARMADO DE TABLERO DE PROTECCION</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="./paginas/trabajos.realizados.html" class="btn btn-primary w-100 bg-warning text-black">Ver mas</a>
+                        <a href="./trabajos.realizados.html" class="btn btn-primary w-100 bg-warning text-black">Ver mas</a>
                     </div>
                 </div>
             </article>
@@ -100,7 +100,7 @@
                     <div class="card-body">
                         <h5 class="card-title">ARMADO DE TABLERO DE PROTECCION</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="./paginas/trabajos.realizados.html" class="btn btn-primary w-100 bg-warning text-black">Ver mas</a>
+                        <a href="./trabajos.realizados.html" class="btn btn-primary w-100 bg-warning text-black">Ver mas</a>
                     </div>
                 </div>
             </article>
@@ -131,7 +131,7 @@
                     <div class="card-body">
                         <h5 class="card-title">ARMADO DE TABLERO DE PROTECCION</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="./paginas/trabajos.realizados.html" class="btn btn-primary w-100 bg-warning text-black">Ver mas</a>
+                        <a href="./trabajos.realizados.html" class="btn btn-primary w-100 bg-warning text-black">Ver mas</a>
                     </div>
                 </div>
             </article>
@@ -162,7 +162,7 @@
                     <div class="card-body">
                         <h5 class="card-title">ARMADO DE TABLERO DE PROTECCION</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="./paginas/trabajos.realizados.html" class="btn btn-primary w-100 bg-warning text-black">Ver mas</a>
+                        <a href="./trabajos.realizados.html" class="btn btn-primary w-100 bg-warning text-black">Ver mas</a>
                     </div>
                 </div>
             </article>
@@ -193,7 +193,7 @@
                     <div class="card-body">
                         <h5 class="card-title">ARMADO DE TABLERO DE PROTECCION</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="./paginas/trabajos.realizados.html" class="btn btn-primary w-100 bg-warning text-black">Ver mas</a>
+                        <a href="./trabajos.realizados.html" class="btn btn-primary w-100 bg-warning text-black">Ver mas</a>
                     </div>
                 </div>
             </article>
@@ -224,7 +224,7 @@
                     <div class="card-body">
                         <h5 class="card-title">ARMADO DE TABLERO DE PROTECCION</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="./paginas/trabajos.realizados.html" class="btn btn-primary w-100 bg-warning text-black">Ver mas</a>
+                        <a href="./trabajos.realizados.html" class="btn btn-primary w-100 bg-warning text-black">Ver mas</a>
                     </div>
                 </div>
             </article>
