correcciones entrega proyecto

--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
             <img src="./imagenes/logo.jpg" alt="logo" class="logo__somos" />
             <div>
                 <h2 class="somos__titulo">Quienes somos?</h2>
-                <p class="somos__desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias accusantium quasi ipsam blanditiis, ducimus, perferendis ullam vero delectus ex sit autem repellat ab! Quidem ipsam vel omnis dolorem tempore praesentium?</p>
+                <p class="somos__desc">Somos una empresa dedicada a la instalacion, mantenimiento y reparacion de equipos electricos. Nos caracterizamos por la calidad y seriedad de nuestro trabajo, nuestras recomendaciones nos avalan.
+                    Trabajamos en obras nuevas y reacondicionamos existentes, los invitamos a que vean algunos de nuestros trabajos. Muchas gracias por visitarnos!!! 
+                </p>
             </div>
         </section>
 
@@ -72,19 +74,19 @@
             <div class="trabGrid">
                 <article class="trabajos">
                     <div class="card trabajos sombra" style="width: auto;">
-                        <img src="./imagenes/tablero.jpg" class="card-img-top" alt="imgTrabajo">
-                        <div class="card-body">
-                            <h5 class="card-title">Armado de tablero de proteccion</h5>
-                            <a href="./paginas/trabajos.realizados.html" class="btn btn-primary w-100">Ver mas</a>
+                        <img src="./imagenes/bajada1.jpg" class="card-img-top" alt="imgTrabajo">
+                        <div class="card-body w-100">
+                            <h5 class="card-title tituloTarjeta">Bajada trifásica</h5>
+                            <a href="./paginas/trabajos.realizados.html" class="btn boton w-100">Ver mas</a>
                         </div>
                     </div>
                 </article>
                 <article class="trabajos">
-                    <div class="card trabajos sombra" style="width: auto;">
-                        <img src="./imagenes/tablero.jpg" class="card-img-top" alt="imgTrabajo">
-                        <div class="card-body">
-                            <h5 class="card-title">Armado de tablero de proteccion</h5>
-                            <a href="./paginas/trabajos.realizados.html" class="btn btn-primary w-100">Ver mas</a>
+                    <div class="card trabajos sombra imagenT" style="width:auto;">
+                        <img src="./imagenes/tablero seccional 3.jpg" class="card-img-top imagenT" alt="imgTrabajo">
+                        <div class="card-body w-100">
+                            <h5 class="card-title tituloTarjeta">Armado de tablero</h5>
+                            <a href="./paginas/trabajos.realizados.html" class="btn boton w-100">Ver mas</a>
                         </div>
                     </div>
                 </article>
@@ -95,16 +97,16 @@
     <footer class="contactos d-flex align-items-center">
         <div class="container">
             <div class="row">
-                <div class= "col-sm-3 col-md-3 d-flex justify-content-center">
+                <div class= "col-md-3 col-sm-6 col-6 d-flex justify-content-center">
                     <a href="./paginas/contactenos.html" class="efectoFoot text-decoration-none">Contactenos</a>
                 </div>
-                <div class= "col-sm-3 col-md-3 d-flex justify-content-center">
+                <div class= "col-md-3 col-sm-6 col-6 d-flex justify-content-center">
                     <a href="https://www.facebook.com/profile.php?id=100063765990228" target="_blank" class=" efectoFoot"><i class="bi bi-facebook"></i></a>
                 </div>
-                <div class= "col-sm-3 col-md-3 d-flex justify-content-center">
+                <div class= "col-md-3 col-sm-6 col-6 d-flex justify-content-center">
                     <a href="" target="_blank" class="efectoFoot"><i class="bi bi-instagram"></i></a>
                 </div>
-                <div class= "col-sm-3 col-md-3 d-flex justify-content-center">
+                <div class= "col-md-3 col-sm-6 col-6 d-flex justify-content-center">
                     <a href="" target="_blank" class="efectoFoot"><i class="bi bi-envelope"></i></a>
                 </div>
             </div>
@@ -112,7 +114,7 @@
     </footer>
 
     <div class="position-fixed bottom-0 end-0 mb-5 me-4">
-        <a href="https://wa.me/5411"><img src="https://cdn.iconscout.com/icon/free/png-512/whatsapp-circle-1868968-1583132.png"alt="Whatsapp" width="60" height="60"/>
+        <a href="https://wa.me/5411" target="_blank"><img src="https://cdn.iconscout.com/icon/free/png-512/whatsapp-circle-1868968-1583132.png"alt="Whatsapp" width="60" height="60"/>
         </a>
     </div>
 </body>
