--- a/paginas/trabajos.realizados.html
+++ b/paginas/trabajos.realizados.html
@@ -43,18 +43,18 @@
     <main>
         <h2 class="titulo__trab">TRABAJOS REALIZADOS</h2>
         <section class="trab">
-            <article class="trabajos ">
+            <article class="trabajos">
                 <div class="card trabajos sombra" style="width: auto;">
-                    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                        <div class="carousel-inner">
+                    <div id="carouselExampleControls" class="carousel slide " data-bs-ride="carousel">
+                        <div class="carousel-inner ">
                             <div class="carousel-item active">
-                                <img src="../imagenes/tablero.jpg" class="d-block w-100 card-img-top " alt="...">
+                                <img src="../imagenes/bajada1.jpg" class="d-block  card-img-top imagenT" alt="bajada">
                             </div>
-                            <div class="carousel-item">
-                                <img src="../imagenes/img_electro.jpg" class="d-block w-100 card-img-top" alt="...">
+                            <div class="carousel-item ">
+                                <img src="../imagenes/bajada2.jpg" class="d-block card-img-top imagenT" alt="bajada">
                             </div>
-                            <div class="carousel-item">
-                                <img src="../imagenes/LOGO Electro.jpg" class="d-block w-100 card-img-top" alt="...">
+                            <div class="carousel-item ">
+                                <img src="../imagenes/bajada3.jpg" class="d-block  card-img-top imagenT" alt="bajada">
                             </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -66,10 +66,10 @@
                             <span class="visually-hidden">Siguiente</span>
                         </button>
                     </div>
-                    <div class="card-body">
-                        <h5 class="card-title">ARMADO DE TABLERO DE PROTECCION</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="./trabajos.realizados.html" class="btn btn-primary w-100 bg-warning text-black">Ver mas</a>
+                    <div class="card-body w-100 tituloTarjeta">
+                        <h5 class="card-title">BAJADA TRIFASICA</h5>
+                        <p class="card-text">Bajada para cables subterraneos de 70mm2</p>
+                        <a href="./trabajos.realizados.html" class="btn w-100 boton">Ver mas</a>
                     </div>
                 </div>
             </article>
@@ -79,13 +79,13 @@
                     <div id="carouselExampleControls2" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="../imagenes/tablero.jpg" class="d-block w-100 card-img-top" alt="...">
+                                <img src="../imagenes/diseño1.jpg" class="d-block w-100 card-img-top imagenT" alt="lampDiseño">
                             </div>
                             <div class="carousel-item">
-                                <img src="../imagenes/img_electro.jpg" class="d-block w-100 card-img-top" alt="...">
+                                <img src="../imagenes/diseño2.jpg" class="d-block w-100 card-img-top imagenT" alt="lampDiseño">
                             </div>
                             <div class="carousel-item">
-                                <img src="../imagenes/LOGO Electro.jpg" class="d-block w-100 card-img-top" alt="...">
+                                <img src="../imagenes/diseño3.jpg" class="d-block w-100 card-img-top imagenT" alt="lampDiseño">
                             </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls2" data-bs-slide="prev">
@@ -97,10 +97,10 @@
                             <span class="visually-hidden">Siguiente</span>
                         </button>
                     </div>
-                    <div class="card-body">
-                        <h5 class="card-title">ARMADO DE TABLERO DE PROTECCION</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="./trabajos.realizados.html" class="btn btn-primary w-100 bg-warning text-black">Ver mas</a>
+                    <div class="card-body w-100 tituloTarjeta">
+                        <h5 class="card-title">LAMPARAS</h5>
+                        <p class="card-text">Colocacion de lamparas de diseño</p>
+                        <a href="./trabajos.realizados.html" class="btn w-100 boton">Ver mas</a>
                     </div>
                 </div>
             </article>
@@ -110,13 +110,13 @@
                     <div id="carouselExampleControls3" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="../imagenes/tablero.jpg" class="d-block w-100 card-img-top" alt="...">
+                                <img src="../imagenes/exterior1.jpg" class="d-block w-100 card-img-top imagenT" alt="instalacionExterior">
                             </div>
                             <div class="carousel-item">
-                                <img src="../imagenes/img_electro.jpg" class="d-block w-100 card-img-top" alt="...">
+                                <img src="../imagenes/exterior2.jpg" class="d-block w-100 card-img-top imagenT" alt="instalacionExterior">
                             </div>
                             <div class="carousel-item">
-                                <img src="../imagenes/LOGO Electro.jpg" class="d-block w-100 card-img-top" alt="...">
+                                <img src="../imagenes/exterior3.jpg" class="d-block w-100 card-img-top imagenT" alt="instalacionExterior">
                             </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls3" data-bs-slide="prev">
@@ -128,10 +128,10 @@
                             <span class="visually-hidden">Siguiente</span>
                         </button>
                     </div>
-                    <div class="card-body">
-                        <h5 class="card-title">ARMADO DE TABLERO DE PROTECCION</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="./trabajos.realizados.html" class="btn btn-primary w-100 bg-warning text-black">Ver mas</a>
+                    <div class="card-body tituloTarjeta">
+                        <h5 class="card-title">INSTALACION EXTERIOR</h5>
+                        <p class="card-text">Instalacion con caño PVC para exterior(patio-jardin)</p>
+                        <a href="./trabajos.realizados.html" class="btn w-100 boton">Ver mas</a>
                     </div>
                 </div>
             </article>
@@ -141,13 +141,13 @@
                     <div id="carouselExampleControls4" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="../imagenes/tablero.jpg" class="d-block w-100 card-img-top" alt="...">
+                                <img src="../imagenes/iluminacion1.jpg" class="d-block w-100 card-img-top" alt="IluminacionDpto">
                             </div>
                             <div class="carousel-item">
-                                <img src="../imagenes/img_electro.jpg" class="d-block w-100 card-img-top" alt="...">
+                                <img src="../imagenes/iluminacion2.jpg" class="d-block w-100 card-img-top" alt="IluminacionDpto">
                             </div>
                             <div class="carousel-item">
-                                <img src="../imagenes/LOGO Electro.jpg" class="d-block w-100 card-img-top" alt="...">
+                                <img src="../imagenes/iluminacion3.jpg" class="d-block w-100 card-img-top" alt="IluminacionDpto">
                             </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls4" data-bs-slide="prev">
@@ -159,10 +159,10 @@
                             <span class="visually-hidden">Siguiente</span>
                         </button>
                     </div>
-                    <div class="card-body">
-                        <h5 class="card-title">ARMADO DE TABLERO DE PROTECCION</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="./trabajos.realizados.html" class="btn btn-primary w-100 bg-warning text-black">Ver mas</a>
+                    <div class="card-body tituloTarjeta">
+                        <h5 class="card-title">ILUMINACION</h5>
+                        <p class="card-text">Colocacion de luminarias en departamento a estrenar</p>
+                        <a href="./trabajos.realizados.html" class="btn w-100 boton">Ver mas</a>
                     </div>
                 </div>
             </article>
@@ -172,13 +172,13 @@
                     <div id="carouselExampleControls5" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="../imagenes/tablero.jpg" class="d-block w-100 card-img-top" alt="...">
+                                <img src="../imagenes/lamparas1.jpg" class="d-block w-100 card-img-top" alt="lucesLed">
                             </div>
                             <div class="carousel-item">
-                                <img src="../imagenes/img_electro.jpg" class="d-block w-100 card-img-top" alt="...">
+                                <img src="../imagenes/lamparas2.jpg" class="d-block w-100 card-img-top" alt="lucesLed">
                             </div>
                             <div class="carousel-item">
-                                <img src="../imagenes/LOGO Electro.jpg" class="d-block w-100 card-img-top" alt="...">
+                                <img src="../imagenes/lamparas3.jpg" class="d-block w-100 card-img-top" alt="lucesLed">
                             </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls5" data-bs-slide="prev">
@@ -190,10 +190,10 @@
                             <span class="visually-hidden">Siguiente</span>
                         </button>
                     </div>
-                    <div class="card-body">
-                        <h5 class="card-title">ARMADO DE TABLERO DE PROTECCION</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="./trabajos.realizados.html" class="btn btn-primary w-100 bg-warning text-black">Ver mas</a>
+                    <div class="card-body tituloTarjeta">
+                        <h5 class="card-title">REFLECTORES LED</h5>
+                        <p class="card-text">Cambio lámparas de vapor de mercurio por reflectores led</p>
+                        <a href="./trabajos.realizados.html" class="btn w-100 boton">Ver mas</a>
                     </div>
                 </div>
             </article>
@@ -203,13 +203,13 @@
                     <div id="carouselExampleControls6" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="../imagenes/tablero.jpg" class="d-block w-100 card-img-top" alt="...">
+                                <img src="../imagenes/tablero seccional 1.jpg" class="d-block w-100 card-img-top" alt="TableroSeccional">
                             </div>
                             <div class="carousel-item">
-                                <img src="../imagenes/img_electro.jpg" class="d-block w-100 card-img-top" alt="...">
+                                <img src="../imagenes/tablero seccional 2.jpg" class="d-block w-100 card-img-top" alt="TableroSeccional">
                             </div>
                             <div class="carousel-item">
-                                <img src="../imagenes/LOGO Electro.jpg" class="d-block w-100 card-img-top" alt="...">
+                                <img src="../imagenes/tablero seccional 3.jpg" class="d-block w-100 card-img-top" alt="TableroSeccional">
                             </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls6" data-bs-slide="prev">
@@ -221,10 +221,10 @@
                             <span class="visually-hidden">Siguiente</span>
                         </button>
                     </div>
-                    <div class="card-body">
-                        <h5 class="card-title">ARMADO DE TABLERO DE PROTECCION</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="./trabajos.realizados.html" class="btn btn-primary w-100 bg-warning text-black">Ver mas</a>
+                    <div class="card-body tituloTarjeta">
+                        <h5 class="card-title">ARMADO DE TABLERO</h5>
+                        <p class="card-text">Armado de tablero seccional en obra nueva</p>
+                        <a href="./trabajos.realizados.html" class="btn w-100 boton">Ver mas</a>
                     </div>
                 </div>
             </article>
@@ -235,16 +235,16 @@
     <footer class="contactos d-flex align-items-center">
         <div class="container">
             <div class="row">
-                <div class= "col-sm-3 col-md-3 d-flex justify-content-center">
+                <div class= "col-md-3 col-sm-6 col-6  d-flex justify-content-center">
                     <a href="./paginas/contactenos.html" class="efectoFoot text-decoration-none">Contactenos</a>
                 </div>
-                <div class= "col-sm-3 col-md-3 d-flex justify-content-center">
+                <div class= "col-md-3 col-sm-6 col-6  d-flex justify-content-center">
                     <a href="https://www.facebook.com/profile.php?id=100063765990228" target="_blank" class=" efectoFoot"><i class="bi bi-facebook"></i></a>
                 </div>
-                <div class= "col-sm-3 col-md-3 d-flex justify-content-center">
+                <div class= "col-md-3 col-sm-6 col-6  d-flex justify-content-center">
                     <a href="" target="_blank" class="efectoFoot"><i class="bi bi-instagram"></i></a>
                 </div>
-                <div class= "col-sm-3 col-md-3 d-flex justify-content-center">
+                <div class= "col-md-3 col-sm-6 col-6  d-flex justify-content-center">
                     <a href="" target="_blank" class="efectoFoot"><i class="bi bi-envelope"></i></a>
                 </div>
             </div>
@@ -252,7 +252,7 @@
     </footer>
 
     <div class="position-fixed bottom-0 end-0 mb-5 me-4">
-        <a href="https://wa.me/5411"><img src="https://cdn.iconscout.com/icon/free/png-512/whatsapp-circle-1868968-1583132.png"alt="Whatsapp" width="60" height="60"/>
+        <a href="https://wa.me/5411" target="_blank"><img src="https://cdn.iconscout.com/icon/free/png-512/whatsapp-circle-1868968-1583132.png"alt="Whatsapp" width="60" height="60"/>
         </a>
     </div>
 </body>
