--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -158,16 +158,16 @@
     <footer class="contactos d-flex align-items-center">
         <div class="container">
             <div class="row">
-                <div class= "col-sm-3 col-md-3 d-flex justify-content-center">
+                <div class= "col-md-3 col-sm-6 col-6  d-flex justify-content-center">
                     <a href="./paginas/contactenos.html" class="efectoFoot text-decoration-none">Contactenos</a>
                 </div>
-                <div class= "col-sm-3 col-md-3 d-flex justify-content-center">
+                <div class= "col-md-3 col-sm-6 col-6  d-flex justify-content-center">
                     <a href="https://www.facebook.com/profile.php?id=100063765990228" target="_blank" class=" efectoFoot"><i class="bi bi-facebook"></i></a>
                 </div>
-                <div class= "col-sm-3 col-md-3 d-flex justify-content-center">
+                <div class= "col-md-3 col-sm-6 col-6  d-flex justify-content-center">
                     <a href="" target="_blank" class="efectoFoot"><i class="bi bi-instagram"></i></a>
                 </div>
-                <div class= "col-sm-3 col-md-3 d-flex justify-content-center">
+                <div class= "col-md-3 col-sm-6 col-6  d-flex justify-content-center">
                     <a href="" target="_blank" class="efectoFoot"><i class="bi bi-envelope"></i></a>
                 </div>
             </div>
@@ -175,7 +175,7 @@
     </footer>
 
     <div class="position-fixed bottom-0 end-0 mb-5 me-4">
-        <a href="https://wa.me/5411"><img src="https://cdn.iconscout.com/icon/free/png-512/whatsapp-circle-1868968-1583132.png"alt="Whatsapp" width="60" height="60"/>
+        <a href="https://wa.me/5411" target="_blank"><img src="https://cdn.iconscout.com/icon/free/png-512/whatsapp-circle-1868968-1583132.png"alt="Whatsapp" width="60" height="60"/>
         </a>
     </div>
 </body>
