--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
         <h2 class="op__titulo">Opiniones</h2>
             <div class="opGrid">
                 <div class="opiniones">
-                    <h4 class="op__c">Cliente 1</h4>
-                    <p class="descOpinion">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis corporis omnis incidunt minima pariatur deserunt fugiat sed nulla laboriosam quod, vitae in nihil! Quos voluptatibus cumque corporis velit facilis perferendis!</p>
+                    <h4 class="op__c">Juan.14</h4>
+                    <p class="descOpinion">Realizaron un excelente trabajo, muy prolijo y bien hecho. muy recomendables!</p>
                     <h5 class="op__op">Opinion: Buena</h5>
                 </div>
                 <div class="opiniones">
-                    <h4 class="op__c">Cliente 2</h4>
-                    <p class="descOpinion">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis corporis omnis incidunt minima pariatur deserunt fugiat sed nulla laboriosam quod, vitae in nihil! Quos voluptatibus cumque corporis velit facilis perferendis!</p>
+                    <h4 class="op__c">Jose_26</h4>
+                    <p class="descOpinion">Muy buen trabajo, mucha seriedad y responsabilidad. Solucionaron todo en muy poco tiempo, super recomendables!!!</p>
                     <h5 class="op__op">Opinion: Buena</h5>
                 </div>
             </div>
