--- a/paginas/opiniones.html
+++ b/paginas/opiniones.html
@@ -42,13 +42,13 @@
         <h2 class="op__titulo">Opiniones</h2>
         <article class="opGrid">
             <div class="opiniones">
-                <h3 class="op__c">Cliente 1</h3>
-                <p class="descOpinion">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis corporis omnis incidunt minima pariatur deserunt fugiat sed nulla laboriosam quod, vitae in nihil! Quos voluptatibus cumque corporis velit facilis perferendis!</p>
+                <h3 class="op__c">Juan.14</h3>
+                <p class="descOpinion">Realizaron un excelente trabajo, muy prolijo y bien hecho. muy recomendables!</p>
                 <h4 class="op__op">Opinion: Buena</h4>      
             </div>
             <div class="opiniones">
-                <h3 class="op__c">Cliente 2</h3>
-                <p class="descOpinion">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis corporis omnis incidunt minima pariatur deserunt fugiat sed nulla laboriosam quod, vitae in nihil! Quos voluptatibus cumque corporis velit facilis perferendis!</p>
+                <h3 class="op__c">Jose_26</h3>
+                <p class="descOpinion">Muy buen trabajo, mucha seriedad y responsabilidad. Solucionaron todo en muy poco tiempo, super recomendables!!!</p>
                 <h4 class="op__op">Opinion: Buena</h4>
             </div>
         </article>
